# lubricant

./: Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.yml  featrue.yaml
.github/workflows/: ci.yaml  publish.yaml
src/: each.rs  lib.rs
src/algorithm/: binary_search.rs  bound.rs  mod.rs  replace.rs  swap.rs
src/array/: each.rs  every.rs  filter.rs  map.rs  mod.rs  some.rs
