[package]
name = "lubricant"
version = "1.0.0-alpha.3"
edition = "2021"
authors = ["GaoNengwWw gaonenggg@outlook.com"]
description = "Rust toolset"
license = "MIT"
license-file = "LICENSE"
documentation = "https://docs.rs/lubricant"
homepage = "https://github.com/GaoNeng-wWw/lubricant.git"
exclude = [".vscode"]

[dependencies]

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3
[profile.test]
opt-level = 0